--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^16.0.1",
+    "graphql-request": "^3.6.1",
+    "html-react-parser": "^1.4.0",
+    "is-reachable": "^5.1.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "next": "latest",
+    "online-status-checker": "^1.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.6.5",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
